--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url-loader": "^0.5.7",
     "vue": "^1.0.26",
     "vue-animated-list": "^1.0.2",
+    "vue-head": "^2.0.6",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.2",
