--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
