--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.24.0",
@@ -23,16 +23,16 @@
     "radon-ui": "^0.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue": "^1.0.26",
+    "vue": "^2.0.1",
     "vue-animated-list": "^1.0.2",
     "vue-head": "^2.0.6",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^8.5.2",
+    "vue-loader": "^9.5.0",
     "vue-resource": "^1.0.2",
-    "vue-router": "^0.7.13",
+    "vue-router": "^2.0.0-rc.7",
     "vue-style-loader": "^1.0.0",
-    "vuex": "^1.0.0-rc.2",
+    "vuex": "^2.0.0-rc.6",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
