--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
-    "vue-animated-list": "^1.0.2",
     "vue-head": "^2.0.6",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
@@ -37,7 +36,7 @@
     "webpack-dev-server": "^1.15.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
+    "start": "webpack-dev-server --hot --inline --port 2333",
     "build": "webpack -p"
   },
   "author": "",
