--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "log4js": "^0.6.38",
     "moment": "^2.15.0",
     "mysql": "^2.11.1"
   },
